# traffic-simulator

./: .gitignore  ML_config.yaml  README.md  config.yaml  datamining_config.yaml  generate_output.sh  output.txt  pyproject.toml  script.py  websearch_config.yaml
configs/: ML_ecmp.yaml  ML_lc.yaml  ML_mut.yaml  ML_percentile.yaml  ML_uneven.yaml  ML_wcmp.yaml  config.yaml  datamining_ecmp.yaml  datamining_lc.yaml  datamining_mut.yaml  datamining_percentile.yaml  datamining_uneven.yaml  datamining_wcmp.yaml  websearch_ecmp.yaml  websearch_lc.yaml  websearch_mut.yaml  websearch_percentile.yaml  websearch_uneven.yaml  websearch_wcmp.yaml
src/traffic_simulator/: __main__.py  cli.py
src/traffic_simulator/config/: config_loader.py  models.py
src/traffic_simulator/flows/: distribution.py  flow_generator.py  flow_size_generator.py  lambda_calculator.py
src/traffic_simulator/metrics/: metric_collector.py  metric_manager.py  metrics_calculator.py  mse.py  utilization.py
src/traffic_simulator/models/: flow.py  link_metrics.py
src/traffic_simulator/ports/: link.py  port.py  port_assigner.py  port_manager.py  strategy.py
src/traffic_simulator/runner/: cli.py
src/traffic_simulator/simulator/: __init__.py  event.py  simulator.py  visualizer.py
