[project]
name = "traffic-simulator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Lin", email = "davidzylin@outlook.com"},
]
dependencies = ["numpy>=2.2.2", "click>=8.1.8"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
traffic-simulator = "traffic_simulator.runner:cli"

[dependency-groups]
lint = [
    "ruff>=0.9.4",
]
